Don't translate code
In this version of the tutorial we are not translating the code. So, the names
in Spanish don't work well.

I assume this is because it was migrated from the original translation from PyAr
where the code was translated.

--- a/tutorial/classes.po
+++ b/tutorial/classes.po
@@ -412,8 +412,8 @@ msgid ""
 "assignment changed the module-level binding."
 msgstr ""
 "Notá como la asignación *local* (que es el comportamiento normal) no cambió "
-"la vinculación de *algo* de *prueba_ambitos*.  La asignación :keyword:"
-"`nonlocal` cambió la vinculación de *algo* de *prueba_ambitos*, y la "
+"la vinculación de *spam* de *scope_test*.  La asignación :keyword:"
+"`nonlocal` cambió la vinculación de *spam* de *scope_test*, y la "
 "asignación :keyword:`global` cambió la vinculación a nivel de módulo."
 
 #: ../Doc/tutorial/classes.rst:205
@@ -421,7 +421,7 @@ msgid ""
 "You can also see that there was no previous binding for *spam* before the :"
 "keyword:`global` assignment."
 msgstr ""
-"También podés ver que no había vinculación para *algo* antes de la "
+"También podés ver que no había vinculación para *spam* antes de la "
 "asignación :keyword:`global`."
 
 #: ../Doc/tutorial/classes.rst:212
@@ -500,7 +500,7 @@ msgstr ""
 "objetos clase en la sección siguiente.  El ámbito local original (el que "
 "tenía efecto justo antes de que ingrese la definición de la clase) es "
 "restablecido, y el objeto clase se asocia allí al nombre que se le puso a la "
-"clase en el encabezado de su definición (:class:`Clase` en el ejemplo)."
+"clase en el encabezado de su definición (:class:`ClassName` en el ejemplo)."
 
 #: ../Doc/tutorial/classes.rst:259
 msgid "Class Objects"
@@ -535,10 +535,10 @@ msgid ""
 "assignment. :attr:`__doc__` is also a valid attribute, returning the "
 "docstring belonging to the class: ``\"A simple example class\"``."
 msgstr ""
-"...entonces ``MiClase.i`` y ``MiClase.f`` son referencias de atributos "
+"entonces ``MyClass.i`` y ``MyClass.f`` son referencias de atributos "
 "válidas, que retornan un entero y un objeto función respectivamente.  Los "
 "atributos de clase también pueden ser asignados, o sea que podés cambiar el "
-"valor de ``MiClase.i`` mediante asignación.  :attr:`__doc__` también es un "
+"valor de ``MyClass.i`` mediante asignación.  :attr:`__doc__` también es un "
 "atributo válido, que retorna la documentación asociada a la clase: "
 "``\"Simple clase de ejemplo\"``."
 
@@ -557,7 +557,7 @@ msgid ""
 "creates a new *instance* of the class and assigns this object to the local "
 "variable ``x``."
 msgstr ""
-"...crea una nueva *instancia* de la clase y asigna este objeto a la variable "
+"crea una nueva *instancia* de la clase y asigna este objeto a la variable "
 "local ``x``."
 
 #: ../Doc/tutorial/classes.rst:291
@@ -623,7 +623,7 @@ msgstr ""
 "en Smalltalk, y con las \"variables miembro\" en C++.  Los atributos de "
 "datos no necesitan ser declarados; tal como las variables locales son "
 "creados la primera vez que se les asigna algo.  Por ejemplo, si ``x`` es la "
-"instancia de :class:`MiClase` creada más arriba, el siguiente pedazo de "
+"instancia de :class:`MyClass` creada más arriba, el siguiente pedazo de "
 "código va a imprimir el valor ``16``, sin dejar ningún rastro::"
 
 #: ../Doc/tutorial/classes.rst:340
@@ -657,9 +657,9 @@ msgstr ""
 "Los nombres válidos de métodos de un objeto instancia dependen de su clase. "
 "Por definición, todos los atributos de clase que son objetos funciones "
 "definen métodos correspondientes de sus instancias.  Entonces, en nuestro "
-"ejemplo, ``x.f`` es una referencia a un método válido, dado que ``MiClase."
-"f`` es una función, pero ``x.i`` no lo es, dado que ``MiClase.i`` no lo es.  "
-"Pero ``x.f`` no es la misma cosa que ``MiClase.f``; es un *objeto método*, "
+"ejemplo, ``x.f`` es una referencia a un método válido, dado que ``MyClass."
+"f`` es una función, pero ``x.i`` no lo es, dado que ``MyClass.i`` no lo es.  "
+"Pero ``x.f`` no es la misma cosa que ``MyClass.f``; es un *objeto método*, "
 "no un objeto función."
 
 #: ../Doc/tutorial/classes.rst:360
@@ -677,13 +677,13 @@ msgid ""
 "is a method object, and can be stored away and called at a later time.  For "
 "example::"
 msgstr ""
-"En el ejemplo :class:`MiClase`, esto retorna la cadena ``'hola mundo'``. "
+"En el ejemplo :class:`MyClass`, esto retorna la cadena ``'hola mundo'``. "
 "Pero no es necesario llamar al método justo en ese momento: ``x.f`` es un "
 "objeto método, y puede ser guardado y llamado más tarde.  Por ejemplo::"
 
 #: ../Doc/tutorial/classes.rst:374
 msgid "will continue to print ``hello world`` until the end of time."
-msgstr "...continuará imprimiendo ``hola mundo`` hasta el fin de los días."
+msgstr "continuará imprimiendo ``hola mundo`` hasta el fin de los días."
 
 #: ../Doc/tutorial/classes.rst:376
 msgid ""
@@ -714,7 +714,7 @@ msgstr ""
 "De hecho, tal vez hayas adivinado la respuesta: lo que tienen de especial "
 "los métodos es que el objeto es pasado como el primer argumento de la "
 "función. En nuestro ejemplo, la llamada ``x.f()`` es exactamente equivalente "
-"a ``MiClase.f(x)``.  En general, llamar a un método con una lista de *n* "
+"a ``MyClass.f(x)``.  En general, llamar a un método con una lista de *n* "
 "argumentos es equivalente a llamar a la función correspondiente con una "
 "lista de argumentos que es creada insertando el objeto del método antes del "
 "primer argumento."
