--- a/tutorial/classes.po
+++ b/tutorial/classes.po
@@ -540,7 +540,7 @@ msgstr ""
 "atributos de clase también pueden ser asignados, o sea que podés cambiar el "
 "valor de ``MyClass.i`` mediante asignación.  :attr:`__doc__` también es un "
 "atributo válido, que retorna la documentación asociada a la clase: "
-"``\"Simple clase de ejemplo\"``."
+"``\"A simple example class\"``."
 
 #: ../Doc/tutorial/classes.rst:282
 msgid ""
@@ -677,13 +677,13 @@ msgid ""
 "is a method object, and can be stored away and called at a later time.  For "
 "example::"
 msgstr ""
-"En el ejemplo :class:`MyClass`, esto retorna la cadena ``'hola mundo'``. "
+"En el ejemplo :class:`MyClass`, esto retorna la cadena ``'hello world'``. "
 "Pero no es necesario llamar al método justo en ese momento: ``x.f`` es un "
 "objeto método, y puede ser guardado y llamado más tarde.  Por ejemplo::"
 
 #: ../Doc/tutorial/classes.rst:374
 msgid "will continue to print ``hello world`` until the end of time."
-msgstr "continuará imprimiendo ``hola mundo`` hasta el fin de los días."
+msgstr "continuará imprimiendo ``hello world`` hasta el fin de los días."
 
 #: ../Doc/tutorial/classes.rst:376
 msgid ""
@@ -765,9 +765,9 @@ msgid ""
 msgstr ""
 "Como se vio en :ref:`tut-object`, los datos compartidos pueden tener efectos "
 "inesperados que involucren objetos :term:`mutable` como ser listas y "
-"diccionarios. Por ejemplo, la lista *trucos* en el siguiente código no "
+"diccionarios. Por ejemplo, la lista *tricks* en el siguiente código no "
 "debería ser usada como variable de clase porque una sola lista sería "
-"compartida por todos las instancias de *Perro*::"
+"compartida por todos las instancias de *Dog*::"
 
 #: ../Doc/tutorial/classes.rst:450
 msgid "Correct design of the class should use an instance variable instead::"
@@ -896,7 +896,7 @@ msgstr ""
 "Los métodos pueden hacer referencia a nombres globales de la misma manera "
 "que lo hacen las funciones comunes.  El ámbito global asociado a un método "
 "es el módulo que contiene su definición.  (Una clase nunca se usa como un "
-"ámbito global.)  Si bien es raro encontrar una buena razón para usar datos "
+"ámbito global).  Si bien es raro encontrar una buena razón para usar datos "
 "globales en un método, hay muchos usos legítimos del ámbito global: por lo "
 "menos, las funciones y módulos importados en el ámbito global pueden usarse "
 "por los métodos, al igual que las funciones y clases definidas en él. "
@@ -933,7 +933,7 @@ msgid ""
 "expressions are also allowed.  This can be useful, for example, when the "
 "base class is defined in another module::"
 msgstr ""
-"El nombre :class:`ClaseBase` debe estar definido en un ámbito que contenga a "
+"El nombre :class:`BaseClassName` debe estar definido en un ámbito que contenga a "
 "la definición de la clase derivada.  En el lugar del nombre de la clase base "
 "se permiten otras expresiones arbitrarias.  Esto puede ser útil, por "
 "ejemplo, cuando la clase base está definida en otro módulo::"
@@ -963,7 +963,7 @@ msgid ""
 "method reference is valid if this yields a function object."
 msgstr ""
 "No hay nada en especial en la instanciación de clases derivadas: "
-"``ClaseDerivada()`` crea una nueva instancia de la clase.  Las referencias a "
+"``DerivedClassName()`` crea una nueva instancia de la clase.  Las referencias a "
 "métodos se resuelven de la siguiente manera: se busca el atributo de clase "
 "correspondiente, descendiendo por la cadena de clases base si es necesario, "
 "y la referencia al método es válida si se entrega un objeto función."
@@ -995,10 +995,10 @@ msgstr ""
 "Un método redefinido en una clase derivada puede de hecho querer extender en "
 "vez de simplemente reemplazar al método de la clase base con el mismo "
 "nombre. Hay una manera simple de llamar al método de la clase base "
-"directamente: simplemente llamás a ``ClaseBase.metodo(self, argumentos)``.  "
+"directamente: simplemente llamás a ``BaseClassName.methodname(self, arguments)``.  "
 "En ocasiones esto es útil para los clientes también.  (Observá que esto sólo "
-"funciona si la clase base es accesible como ``ClaseBase`` en el ámbito "
-"global.)"
+"funciona si la clase base es accesible como ``BaseClassName`` en el ámbito "
+"global)."
 
 #: ../Doc/tutorial/classes.rst:616
 msgid "Python has two built-in functions that work with inheritance:"
@@ -1052,7 +1052,7 @@ msgstr ""
 "la búsqueda de los atributos heredados de clases padres como primero en "
 "profundidad, de izquierda a derecha, sin repetir la misma clase cuando está "
 "dos veces en la jerarquía.  Por lo tanto, si un atributo no se encuentra en :"
-"class:`ClaseDerivada`, se busca en :class:`Base1`, luego (recursivamente) en "
+"class:`DerivedClassName`, se busca en :class:`Base1`, luego (recursivamente) en "
 "las clases base de :class:`Base1`, y sólo si no se encuentra allí se lo "
 "busca en :class:`Base2`, y así sucesivamente."
 
