--- a/c-api/bytearray.po
+++ b/c-api/bytearray.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2022-11-05 12:32-0300\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"Last-Translator: Sofía Denner <sofi.denner@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -126,9 +126,3 @@ msgstr ""
 msgid "Similar to :c:func:`PyByteArray_Size`, but without error checking."
 msgstr ""
 "Similar a :c:func:`PyByteArray_Size`, pero sin comprobación de errores."
-
-#~ msgid "Macro version of :c:func:`PyByteArray_AsString`."
-#~ msgstr "Versión macro de :c:func:`PyByteArray_AsString`."
-
-#~ msgid "Macro version of :c:func:`PyByteArray_Size`."
-#~ msgstr "Versión macro de :c:func:`PyByteArray_Size`."
