Translate c-api/bytearray (#2171)
Closes #2051

Co-authored-by: Sofia Denner <sofia.denner@mercadolibre.com>

--- a/c-api/bytearray.po
+++ b/c-api/bytearray.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-01 20:18+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2022-11-05 12:32-0300\n"
+"Last-Translator: Sofía Denner <sofi.denner@gmail.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/c-api/bytearray.rst:6
 msgid "Byte Array Objects"
@@ -119,13 +120,9 @@ msgstr ""
 #: ../Doc/c-api/bytearray.rst:80
 msgid "Similar to :c:func:`PyByteArray_AsString`, but without error checking."
 msgstr ""
+"Similar a :c:func:`PyByteArray_AsString`, pero sin comprobación de errores."
 
 #: ../Doc/c-api/bytearray.rst:85
 msgid "Similar to :c:func:`PyByteArray_Size`, but without error checking."
 msgstr ""
-
-#~ msgid "Macro version of :c:func:`PyByteArray_AsString`."
-#~ msgstr "Versión macro de :c:func:`PyByteArray_AsString`."
-
-#~ msgid "Macro version of :c:func:`PyByteArray_Size`."
-#~ msgstr "Versión macro de :c:func:`PyByteArray_Size`."
+"Similar a :c:func:`PyByteArray_Size`, pero sin comprobación de errores."
