--- a/faq/library.po
+++ b/faq/library.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-02 11:09+0200\n"
+"PO-Revision-Date: 2022-11-05 13:47-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/faq/library.rst:5
 msgid "Library and Extension FAQ"
@@ -337,7 +338,6 @@ msgid "How do I create documentation from doc strings?"
 msgstr "¿Cómo creo documentación a partir de los docstrings?"
 
 #: ../Doc/faq/library.rst:181
-#, fuzzy
 msgid ""
 "The :mod:`pydoc` module can create HTML from the doc strings in your Python "
 "source code.  An alternative for creating API documentation purely from "
@@ -717,11 +717,19 @@ msgid ""
 "The :mod:`shutil` module contains a :func:`~shutil.copyfile` function. Note "
 "that on Windows NTFS volumes, it does not copy `alternate data streams "
 "<https://en.wikipedia.org/wiki/NTFS#Alternate_data_stream_(ADS)>`_ nor "
-"`resource forks <https://en.wikipedia.org/wiki/Resource_fork>`__ on macOS "
-"HFS+ volumes, though both are now rarely used. It also doesn't copy file "
+"`resource forks <https://en.wikipedia.org/wiki/Resource_fork>`__ on macOS HFS"
+"+ volumes, though both are now rarely used. It also doesn't copy file "
 "permissions and metadata, though using :func:`shutil.copy2` instead will "
 "preserve most (though not all) of it."
 msgstr ""
+"El módulo :mod:`shutil` contiene una función :func:`~shutil.copyfile`. "
+"Nótese que en volúmenes de Windows NTFS, no copia los `flujos alternativos "
+"de datos *(ADS)* <https://es.wikipedia.org/wiki/Alternate_Data_Streams>`_ ni "
+"las `bifurcaciones de recursos *(resource forks)*<https://en.wikipedia.org/"
+"wiki/Resource_fork>`__ en los volúmenes macOS HFS+, aunque ahora ambos rara "
+"vez son utilizados. Además tampoco copia los permisos ni metadatos de los "
+"archivos, pero si se usa :func:`shutil.copy2` en su lugar, se preservará la "
+"mayor parte (aunque no todo)."
 
 #: ../Doc/faq/library.rst:497
 msgid "How do I read (or write) binary data?"
@@ -772,8 +780,8 @@ msgid ""
 "will return :class:`str` objects rather than :class:`bytes` objects."
 msgstr ""
 "Para leer y escribir datos binarios, es obligatorio abrir el fichero en modo "
-"binario (aquí, pasando ``\"rb\"`` a :func:`open`). Si, en cambio, usa "
-"``\"r\"`` (por defecto), el fichero se abrirá en modo texto y ``f.read()`` "
+"binario (aquí, pasando ``\"rb\"`` a :func:`open`). Si, en cambio, usa ``\"r"
+"\"`` (por defecto), el fichero se abrirá en modo texto y ``f.read()`` "
 "retornará objetos :class:`str` en vez de objetos :class:`bytes`."
 
 #: ../Doc/faq/library.rst:529
@@ -801,11 +809,11 @@ msgstr "¿Cómo accedo al puerto serial (RS232)?"
 
 #: ../Doc/faq/library.rst:620
 msgid "For Win32, OSX, Linux, BSD, Jython, IronPython:"
-msgstr ""
+msgstr "Para Win32, OSX, Linux, BSD, Jython, IronPython:"
 
 #: ../Doc/faq/library.rst:622
 msgid "https://pypi.org/project/pyserial/"
-msgstr ""
+msgstr "https://pypi.org/project/pyserial/"
 
 #: ../Doc/faq/library.rst:624
 msgid "For Unix, see a Usenet post by Mitch Chapman:"
@@ -897,14 +905,14 @@ msgstr ""
 "wiki.python.org/moin/WebProgramming\\ ."
 
 #: ../Doc/faq/library.rst:672
-#, fuzzy
 msgid ""
 "Cameron Laird maintains a useful set of pages about Python web technologies "
 "at https://web.archive.org/web/20210224183619/http://phaseit.net/claird/comp."
 "lang.python/web_python."
 msgstr ""
 "Cameron Laird mantiene un conjunto útil de páginas sobre tecnologías web "
-"Python en http://phaseit.net/claird/comp.lang.python/web_python."
+"Python en https://web.archive.org/web/20210224183619/http://phaseit.net/"
+"claird/comp.lang.python/web_python."
 
 #: ../Doc/faq/library.rst:677
 msgid "How can I mimic CGI form submission (METHOD=POST)?"
