manual changes in faq/library

--- a/faq/library.po
+++ b/faq/library.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2022-11-05 13:47-0300\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"Last-Translator: Sofía Denner <sofi.denner@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -1155,31 +1155,3 @@ msgid ""
 msgstr ""
 "También hay una clase ``Random`` que usted puede instanciar para crear "
 "múltiples generadores independientes de valores aleatorios."
-
-#~ msgid ""
-#~ "For Windows: use `the consolelib module <http://effbot.org/zone/console-"
-#~ "index.htm>`_."
-#~ msgstr ""
-#~ "Para Windows: use `el módulo consolelib <http://effbot.org/zone/console-"
-#~ "index.htm>`_."
-
-#~ msgid ""
-#~ "Aahz has a set of slides from his threading tutorial that are helpful; "
-#~ "see http://www.pythoncraft.com/OSCON2001/."
-#~ msgstr ""
-#~ "Aahz tiene un conjunto de transparencias en su tutorial de hilos que "
-#~ "resulta útil: vea http://www.pythoncraft.com/OSCON2001/."
-
-#~ msgid ""
-#~ "The :mod:`shutil` module contains a :func:`~shutil.copyfile` function.  "
-#~ "Note that on MacOS 9 it doesn't copy the resource fork and Finder info."
-#~ msgstr ""
-#~ "El módulo :mod:`shutil` contiene una función :func:`~shutil.copyfile`. "
-#~ "Nótese que en MacOS 9 no copia el fork del recurso ni la información de "
-#~ "Finder."
-
-#~ msgid "For Win32, POSIX (Linux, BSD, etc.), Jython:"
-#~ msgstr "Para *Win32*, POSIX (Linux, BSD, etc.), Jython:"
-
-#~ msgid "http://pyserial.sourceforge.net"
-#~ msgstr "http://pyserial.sourceforge.net"
