--- a/faq/library.po
+++ b/faq/library.po
@@ -717,8 +717,8 @@ msgid ""
 "The :mod:`shutil` module contains a :func:`~shutil.copyfile` function. Note "
 "that on Windows NTFS volumes, it does not copy `alternate data streams "
 "<https://en.wikipedia.org/wiki/NTFS#Alternate_data_stream_(ADS)>`_ nor "
-"`resource forks <https://en.wikipedia.org/wiki/Resource_fork>`__ on macOS HFS"
-"+ volumes, though both are now rarely used. It also doesn't copy file "
+"`resource forks <https://en.wikipedia.org/wiki/Resource_fork>`__ on macOS "
+"HFS+ volumes, though both are now rarely used. It also doesn't copy file "
 "permissions and metadata, though using :func:`shutil.copy2` instead will "
 "preserve most (though not all) of it."
 msgstr ""
@@ -780,8 +780,8 @@ msgid ""
 "will return :class:`str` objects rather than :class:`bytes` objects."
 msgstr ""
 "Para leer y escribir datos binarios, es obligatorio abrir el fichero en modo "
-"binario (aquí, pasando ``\"rb\"`` a :func:`open`). Si, en cambio, usa ``\"r"
-"\"`` (por defecto), el fichero se abrirá en modo texto y ``f.read()`` "
+"binario (aquí, pasando ``\"rb\"`` a :func:`open`). Si, en cambio, usa "
+"``\"r\"`` (por defecto), el fichero se abrirá en modo texto y ``f.read()`` "
 "retornará objetos :class:`str` en vez de objetos :class:`bytes`."
 
 #: ../Doc/faq/library.rst:529
