Traducción archivo c-api/intro

--- a/c-api/intro.po
+++ b/c-api/intro.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-12-09 10:48+0800\n"
-"Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2022-11-14 17:55-0500\n"
+"Last-Translator: David Orejuela <daorejuela1@outlook.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/c-api/intro.rst:8
 msgid "Introduction"
@@ -237,6 +238,8 @@ msgid ""
 "Ask the compiler to always inline a static inline function. The compiler can "
 "ignore it and decides to not inline the function."
 msgstr ""
+"Ordena al compilador a siempre usar inline en una función estática inline. "
+"El compilador puede ignorarlo y decidir no usar inline en la función."
 
 #: ../Doc/c-api/intro.rst:119
 msgid ""
@@ -244,6 +247,10 @@ msgid ""
 "building Python in debug mode with function inlining disabled. For example, "
 "MSC disables function inlining when building in debug mode."
 msgstr ""
+"Puede ser usado para usar inline en funciones estáticas inline de "
+"rendimiento crítico cuando se corre Python en modo de depuración con inline "
+"de funciones deshabilitado. Por ejemplo, MSC deshabilita el inline de "
+"funciones cuando se configura en modo de depuración."
 
 #: ../Doc/c-api/intro.rst:123
 msgid ""
@@ -251,16 +258,23 @@ msgid ""
 "worse performances (due to increased code size for example). The compiler is "
 "usually smarter than the developer for the cost/benefit analysis."
 msgstr ""
+"Marcar ciegamente una función estática inline con Py_ALWAYS_INLINE puede "
+"resultar en peor rendimientos (debido a un aumento del tamaño del código, "
+"por ejemplo). El compilador es generalmente más inteligente que el "
+"desarrollador para el análisis costo/beneficio."
 
 #: ../Doc/c-api/intro.rst:127
 msgid ""
 "If Python is :ref:`built in debug mode <debug-build>` (if the ``Py_DEBUG`` "
 "macro is defined), the :c:macro:`Py_ALWAYS_INLINE` macro does nothing."
 msgstr ""
+"Si Python está :ref:`configurado en modo de depuración <debug-build>` (si el "
+"macro ``Py_DEBUG`` está definido), el macro :c:macro:`Py_ALWAYS_INLINE` no "
+"hace nada."
 
 #: ../Doc/c-api/intro.rst:130
 msgid "It must be specified before the function return type. Usage::"
-msgstr ""
+msgstr "Debe ser especificado antes del tipo de retorno de la función. Uso::"
 
 #: ../Doc/c-api/intro.rst:138
 msgid ""
@@ -314,10 +328,13 @@ msgid ""
 "consumption: useful on LTO+PGO builds which heavily inline code (see :issue:"
 "`33720`)."
 msgstr ""
+"Deshabilita el uso de inline en una función. Por ejemplo, reduce el consumo "
+"de la pila C: útil en compilaciones LTO+PGO que usan mucho inline (ver :"
+"issue:`33720`)."
 
 #: ../Doc/c-api/intro.rst:182
 msgid "Usage::"
-msgstr ""
+msgstr "Uso::"
 
 #: ../Doc/c-api/intro.rst:190
 msgid ""
@@ -812,6 +829,10 @@ msgid ""
 "type). See :pep:`353` for details. ``PY_SSIZE_T_MAX`` is the largest "
 "positive value of type :c:type:`Py_ssize_t`."
 msgstr ""
+"Un tipo integral con signo tal que ``sizeof(Py_ssize_t) == sizeof(size_t)``. "
+"C99 no define directamente tal cosa (size_t es un tipo integral sin signo). "
+"Vea :pep:`353` para más detalles. ``PY_SSIZE_T_MAX`` es el valor positivo "
+"más grande del tipo :c:type:`Py_ssize_t`."
 
 #: ../Doc/c-api/intro.rst:551
 msgid "Exceptions"
@@ -1025,6 +1046,11 @@ msgid ""
 "later, setting :c:member:`PyConfig.argv` and :c:member:`PyConfig.parse_argv` "
 "must be set: see :ref:`Python Initialization Configuration <init-config>`."
 msgstr ""
+":c:func:`Py_Initialize` no establece la \"lista de argumentos de "
+"script\" (``sys.argv``). Si esta variable es necesaria por el código Python "
+"que se ejecutará más tarde, debe establecerse :c:member:`PyConfig.argv` y :c:"
+"member:`PyConfig.parse_argv`: consulte :ref:`Python Initialization "
+"Configuration <init-config>`."
 
 #: ../Doc/c-api/intro.rst:724
 msgid ""
@@ -1191,15 +1217,3 @@ msgid ""
 msgstr ""
 "Consulte :file:`Misc/SpecialBuilds.txt` en la distribución fuente de Python "
 "para obtener información más detallada."
-
-#~ msgid ""
-#~ ":c:func:`Py_Initialize` does not set the \"script argument list\"  (``sys."
-#~ "argv``). If this variable is needed by Python code that will be executed "
-#~ "later, it must be set explicitly with a call to  ``PySys_SetArgvEx(argc, "
-#~ "argv, updatepath)`` after the call to :c:func:`Py_Initialize`."
-#~ msgstr ""
-#~ ":c:func:`Py_Initialize` no establece la \"lista de argumentos de "
-#~ "script\" (``sys.argv``). Si el código de Python necesita esta variable "
-#~ "que se ejecutará más adelante, debe establecerse explícitamente con una "
-#~ "llamada a ``PySys_SetArgvEx(argc, argv, updatepath)`` después de la "
-#~ "llamada a :c:func:`Py_Initialize`."
