mejora redacción tutorial capítulo 1

--- a/tutorial/appetite.po
+++ b/tutorial/appetite.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2019-05-06 17:18-0400\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2022-11-11 08:52-0300\n"
+"Last-Translator: Carlos A. Crespo <lvccrespo@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: ../Doc/tutorial/appetite.rst:5
 msgid "Whetting Your Appetite"
@@ -68,13 +69,13 @@ msgid ""
 "draft program.  Python is simpler to use, available on Windows, macOS, and "
 "Unix operating systems, and will help you get the job done more quickly."
 msgstr ""
-"Puede escribir un script de shell de Unix o archivos por lotes de Windows "
-"para algunas de estas tareas, pero los scripts de shell son mejores para "
-"mover archivos y cambiar datos de texto, no son adecuados para juegos o "
-"aplicaciones GUI. Podría escribir un programa C / C ++ / Java, pero puede "
-"llevar mucho tiempo de desarrollo obtener incluso un programa de primer "
+"Puedes escribir un script de shell de Unix o archivos por lotes de Windows "
+"para algunas de estas tareas. Los scripts de shell son mejores para mover "
+"archivos y cambiar datos de texto, pero no son adecuados para juegos o "
+"aplicaciones GUI. Podrías escribir un programa C / C ++ / Java, pero "
+"llevaría mucho tiempo de desarrollo obtener incluso un primer programa de "
 "borrador. Python es más fácil de usar, está disponible en los sistemas "
-"operativos Windows, macOS y Unix, y lo ayudará a hacer el trabajo más "
+"operativos Windows, macOS y Unix, y telo ayudará a hacer el trabajo más "
 "rápidamente."
 
 #: ../Doc/tutorial/appetite.rst:29
@@ -88,14 +89,14 @@ msgid ""
 "problem domain than Awk or even Perl, yet many things are at least as easy "
 "in Python as in those languages."
 msgstr ""
-"Python es fácil de utilizar siendo un lenguaje de programación real "
+"Python es fácil de utilizar y es un verdadero lenguaje de programación "
 "ofreciendo mucha más estructura y soporte para programas grandes que la que "
-"ofrecen shell scripts o ficheros batch. Por otro lado, Python también ofrece "
-"mayor comprobación de errores que C y siendo un *lenguaje de muy alto nivel* "
-"tiene tipos de datos de alto nivel incorporados como listas flexibles y "
-"diccionarios. Debido a sus tipos de datos más generales, Python es aplicable "
-"a más dominios que Awk o Perl, aunque hay muchas cosas que son tan sencillas "
-"en Python como en esos lenguajes."
+"ofrecen scripts de shell o archivos por lotes. Por otro lado, Python también "
+"ofrece mayor comprobación de errores que C y siendo un *lenguaje de muy alto "
+"nivel* tiene tipos de datos de alto nivel incorporados como listas flexibles "
+"y diccionarios. Debido a sus tipos de datos más generales, Python es "
+"aplicable a más dominios que Awk o Perl, aunque hay muchas cosas que son tan "
+"sencillas en Python como en esos lenguajes."
 
 #: ../Doc/tutorial/appetite.rst:37
 msgid ""
