--- a/tutorial/appetite.po
+++ b/tutorial/appetite.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2022-11-11 08:52-0300\n"
+"PO-Revision-Date: 2022-11-11 08:53-0300\n"
 "Last-Translator: Carlos A. Crespo <lvccrespo@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -75,7 +75,7 @@ msgstr ""
 "aplicaciones GUI. Podrías escribir un programa C / C ++ / Java, pero "
 "llevaría mucho tiempo de desarrollo obtener incluso un primer programa de "
 "borrador. Python es más fácil de usar, está disponible en los sistemas "
-"operativos Windows, macOS y Unix, y telo ayudará a hacer el trabajo más "
+"operativos Windows, macOS y Unix, y te ayudará a hacer el trabajo más "
 "rápidamente."
 
 #: ../Doc/tutorial/appetite.rst:29
