remove * from links

--- a/faq/library.po
+++ b/faq/library.po
@@ -724,8 +724,8 @@ msgid ""
 msgstr ""
 "El módulo :mod:`shutil` contiene una función :func:`~shutil.copyfile`. "
 "Nótese que en volúmenes de Windows NTFS, no copia los `flujos alternativos "
-"de datos **(ADS)** <https://es.wikipedia.org/wiki/Alternate_Data_Streams>`_ "
-"ni las `bifurcaciones de recursos **(resource forks)** <https://en.wikipedia."
+"de datos (ADS) <https://es.wikipedia.org/wiki/Alternate_Data_Streams>`_ "
+"ni las `bifurcaciones de recursos (resource forks) <https://en.wikipedia."
 "org/wiki/Resource_fork>`_ en los volúmenes macOS HFS+, aunque ahora ambos "
 "rara vez son utilizados. Además tampoco copia los permisos ni metadatos de "
 "los archivos, pero si se usa :func:`shutil.copy2` en su lugar, se preservará "
