--- a/c-api/set.po
+++ b/c-api/set.po
@@ -220,7 +220,7 @@ msgid ""
 "grow.  Raise a :exc:`SystemError` if *set* is not an instance of :class:"
 "`set` or its subtype."
 msgstr ""
-"Añade *clave* a una instancia :class:`set`.  También funciona con instancias "
+"Añade *key* a una instancia :class:`set`.  También funciona con instancias "
 "de :class:`frozenset` (al igual que :c:func:`PyTuple_SetItem` puede usarse "
 "para rellenar los valores de nuevos frozensets antes de que sean expuestos a "
 "otro código).  Devuelve ``0`` en caso de éxito o ``-1`` en caso de fallo. "
