--- a/whatsnew/2.5.po
+++ b/whatsnew/2.5.po
@@ -54,8 +54,8 @@ msgid ""
 msgstr ""
 "Los cambios en Python 2.5 son una interesante mezcla de mejoras en el "
 "lenguaje y en las bibliotecas. Las mejoras en las bibliotecas serán más "
-"importantes para la comunidad de usuarios de Python, creo, debido a que "
-"se han añadido varios paquetes bastante útiles.  Los nuevos módulos incluyen "
+"importantes para la comunidad de usuarios de Python, creo, debido a que se "
+"han añadido varios paquetes bastante útiles.  Los nuevos módulos incluyen "
 "ElementTree para el procesamiento de XML (:mod:`xml.etree`), el módulo de "
 "base de datos SQLite (:mod:`sqlite`), y el módulo :mod:`ctypes` para llamar "
 "a funciones escritas en lenugaje C."
@@ -1443,10 +1443,10 @@ msgid ""
 "handle more data on 64-bit platforms. This change doesn't affect Python's "
 "capacity on 32-bit platforms."
 msgstr ""
-"Un amplio cambio en la API de C de Python, que utiliza una nueva definición de "
-"tipo :c:type:`Py_ssize_t` en lugar de :c:type:`int`, permitirá al intérprete "
-"manejar más datos en plataformas de 64 bits. Este cambio no afecta a la "
-"capacidad de Python en plataformas de 32 bits."
+"Un amplio cambio en la API de C de Python, que utiliza una nueva definición "
+"de tipo :c:type:`Py_ssize_t` en lugar de :c:type:`int`, permitirá al "
+"intérprete manejar más datos en plataformas de 64 bits. Este cambio no "
+"afecta a la capacidad de Python en plataformas de 32 bits."
 
 #: ../Doc/whatsnew/2.5.rst:879
 #, fuzzy
@@ -3642,9 +3642,9 @@ msgid ""
 "change."
 msgstr ""
 "El cambio mas notorio en la API de C proviene de :pep:`353`, que modifica el "
-"intérprete para utilizar  definición de tipo :c:type:`Py_ssize_t` en "
-"lugar de :c:type:`int`.  Vea la sección anterior :ref:`pep-353` para "
-"discutir este cambio."
+"intérprete para utilizar  definición de tipo :c:type:`Py_ssize_t` en lugar "
+"de :c:type:`int`.  Vea la sección anterior :ref:`pep-353` para discutir este "
+"cambio."
 
 #: ../Doc/whatsnew/2.5.rst:2099
 msgid ""
@@ -4000,11 +4000,11 @@ msgid ""
 "to make the same change to avoid warnings and to support 64-bit machines.  "
 "See the earlier section :ref:`pep-353` for a discussion of this change."
 msgstr ""
-"API C: Muchas funciones utilizan :c:type:`Py_ssize_t` en lugar de :c:type:`int` "
-"para permitir el procesamiento de más datos en computadoras de 64 "
+"API C: Muchas funciones utilizan :c:type:`Py_ssize_t` en lugar de :c:type:"
+"`int` para permitir el procesamiento de más datos en computadoras de 64 "
 "bits.  Es posible que el código de las extensiones tenga que hacer el mismo "
-"cambio para evitar advertencias y soportar computadoras de 64 bits.  Véase la "
-"sección anterior :ref:`pep-353` para una discusión de este cambio."
+"cambio para evitar advertencias y soportar computadoras de 64 bits.  Véase "
+"la sección anterior :ref:`pep-353` para una discusión de este cambio."
 
 #: ../Doc/whatsnew/2.5.rst:2272
 msgid ""
@@ -4014,8 +4014,8 @@ msgid ""
 "corresponding family's ``*_Free`` function."
 msgstr ""
 "API C:  Los cambios en obmalloc significan que debe tener cuidado de no "
-"mezclar el uso de las familias de funciones :c:func:`PyMem_\\*` y :c:func:`PyObject_\\*`. "
-"La memoria asignada con la función :c:func:`\\*_Malloc` de "
+"mezclar el uso de las familias de funciones :c:func:`PyMem_\\*` y :c:func:"
+"`PyObject_\\*`. La memoria asignada con la función :c:func:`\\*_Malloc` de "
 "una familia, debe ser liberada con la función :c:func:`\\*_Free` de la "
 "familia correspondiente."
 
