--- a/whatsnew/2.5.po
+++ b/whatsnew/2.5.po
@@ -58,7 +58,7 @@ msgstr ""
 "han añadido varios paquetes bastante útiles.  Los nuevos módulos incluyen "
 "ElementTree para el procesamiento de XML (:mod:`xml.etree`), el módulo de "
 "base de datos SQLite (:mod:`sqlite`), y el módulo :mod:`ctypes` para llamar "
-"a funciones escritas en lenugaje C."
+"a funciones escritas en lenguaje C."
 
 #: ../Doc/whatsnew/2.5.rst:23
 msgid ""
