error formato entradas

--- a/whatsnew/2.5.po
+++ b/whatsnew/2.5.po
@@ -4014,10 +4014,9 @@ msgid ""
 "corresponding family's ``*_Free`` function."
 msgstr ""
 "API C:  Los cambios en obmalloc significan que debe tener cuidado de no "
-"mezclar el uso de las familias de funciones :c:func:`PyMem_\\*` y :c:func:"
-"`PyObject_\\*`. La memoria asignada con la función :c:func:`\\*_Malloc` de "
-"una familia, debe ser liberada con la función :c:func:`\\*_Free` de la "
-"familia correspondiente."
+"mezclar el uso de las familias de funciones ``PyMem_*`` y ``PyObject_*``. La "
+"memoria asignada con la función ``*_Malloc`` de una familia, debe ser "
+"liberada con la función ``*_Free`` de la familia correspondiente."
 
 #: ../Doc/whatsnew/2.5.rst:2281
 msgid "Acknowledgements"
